Fixed login button contrast error

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -31,7 +31,7 @@ h1 {
   border-radius: 10px;
 }
 .header-button>a:link, .header-button>a:hover {
-  color: #313753;
+  color: #efefef;
   border-color: #313753;
 }
 .header-button>a:visited {
